--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,33 @@
-<% include ./partials/header %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Budget Organizer</title>
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
+        <link rel="stylesheet" type="text/css" href="css/intro.css">
+        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+      	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
+      	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
+    </head>
+    <body>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href='/'>Budget Organizer</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <% if(!currentUser){ %>
+                            <li><a href='/login'>Login</a></li>
+                            <li><a href='/register'>Signup</a></li>
+                        <% } else { %>
+                            <li><a href='#'><%= currentUser.name %></a></li>
+                            <li><a href='/logout'>Logout</a></li>
+                        <% } %>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
 
 <h1>Register</h1>
 <form action='/register' method='POST'>
@@ -13,5 +42,6 @@
     <button>Submit</button>
 </form>
 <a href="/">back</a>
+</div>
 
 <% include ./partials/footer %>
