--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,1 +1,25 @@
-<h1>SECRET</h1>
+<% include partials/header %>
+
+<div class='container'>
+    <div class="jumbotron">
+        <div class="container">
+            <% if(!currentUser){ %>
+                <h1>Welcome to Budget Orginizer</h1>
+            <% } else { %>
+                <h1>Welcome to Budget Organizer - <%= currentUser.name %></h1>
+            <% } %>
+        </div>
+    </div>
+    <h1>To-Do List <i class="fa fa-plus"></i></h1>
+  	<input type="text" placeholder="Add New Todo">
+
+  	<ul>
+  		<li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
+  		<li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
+  		<li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
+  	</ul>
+    <script type="text/javascript" src="../js/budgetlist.js"></script>
+    <a href='/'>Back</a>
+</div>
+
+<% include partials/footer %>
